--- a/Girl Code/Base.lproj/Main.storyboard
+++ b/Girl Code/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="e9Y-v5-B3E">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vca-Qb-Iph">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -22,7 +22,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X5D-j7-8yb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-723" y="-921"/>
+            <point key="canvasLocation" x="288" y="-1996"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="ecx-QP-Yg3">
@@ -50,19 +50,27 @@
                                     <action selector="signUpPressed:" destination="iRn-su-Gnf" eventType="touchUpInside" id="py5-kM-Qr7"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome to Girl Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9hF-7o-n44">
+                                <rect key="frame" x="124" y="330" width="166" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Knk-pN-bxn"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="Gh5-gh-281"/>
                     <connections>
+                        <outlet property="welcomeLabel" destination="9hF-7o-n44" id="aer-Dr-eRg"/>
                         <segue destination="aQz-14-wfY" kind="show" identifier="goToSignUp" id="yke-Wl-B0Z"/>
                         <segue destination="Lxs-8U-iRg" kind="show" identifier="goToLogin" id="Kfh-SN-la8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ubR-JF-qSz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-13.043478260869566" y="-921.42857142857133"/>
+            <point key="canvasLocation" x="1023" y="-1996"/>
         </scene>
         <!--Login-->
         <scene sceneID="m8t-uj-jed">
@@ -71,35 +79,108 @@
                     <view key="view" contentMode="scaleToFill" id="Vjq-AI-evY">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Email" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f9X-AI-8Uh">
+                                <rect key="frame" x="159" y="409" width="100" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ffq-tQ-BT4">
+                                <rect key="frame" x="178" y="493" width="60" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Login"/>
+                                <connections>
+                                    <action selector="loginPressed:" destination="Lxs-8U-iRg" eventType="touchUpInside" id="nML-Lq-8Gx"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Password" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wib-3b-GnS">
+                                <rect key="frame" x="159" y="451" width="100" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="1OU-uB-FCo"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" title="Login" id="ecA-Mc-IUe"/>
+                    <connections>
+                        <outlet property="emailTextField" destination="f9X-AI-8Uh" id="iNp-ED-Yln"/>
+                        <outlet property="passwordTextField" destination="Wib-3b-GnS" id="Lg8-V9-xhj"/>
+                        <segue destination="e9Y-v5-B3E" kind="show" identifier="completeLogin" id="X8d-1u-Cqx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ptd-q5-fbd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="748" y="-1280"/>
+            <point key="canvasLocation" x="1793" y="-2378"/>
         </scene>
         <!--Sign Up-->
         <scene sceneID="h6B-kB-F3H">
             <objects>
-                <viewController id="aQz-14-wfY" sceneMemberID="viewController">
+                <viewController id="aQz-14-wfY" customClass="SignUpViewController" customModule="Girl_Code" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="R11-Ii-XRj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="email" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="25b-uo-hVJ">
+                                <rect key="frame" x="159" y="414" width="97" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="emailTextField:" destination="603-Jm-gwD" eventType="editingDidEnd" id="IZJ-K8-rSd"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="create password" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rz2-Xm-4Sh">
+                                <rect key="frame" x="159" y="456" width="135" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="passwordTextField:" destination="603-Jm-gwD" eventType="editingDidEnd" id="hmB-Po-hUU"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="confirm password" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nX2-AE-17Z">
+                                <rect key="frame" x="159" y="498" width="144" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oc9-M2-CLK">
+                                <rect key="frame" x="170" y="540" width="75" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Sign Up"/>
+                                <connections>
+                                    <action selector="signUpPressed:" destination="aQz-14-wfY" eventType="touchUpInside" id="Cwe-6s-Kxm"/>
+                                    <action selector="signUpPressed:" destination="603-Jm-gwD" eventType="touchUpInside" id="XdB-Zx-yIG"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="EkL-r7-5Nq"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" title="Sign Up" id="i1q-7Q-Gsq"/>
+                    <connections>
+                        <outlet property="confirmPassword" destination="nX2-AE-17Z" id="1pM-hg-Cdd"/>
+                        <outlet property="createPassword" destination="rz2-Xm-4Sh" id="nTn-5K-DQa"/>
+                        <outlet property="createPasswordTextField" destination="rz2-Xm-4Sh" id="nUQ-vd-jeT"/>
+                        <outlet property="emailTextField" destination="25b-uo-hVJ" id="6Ch-cV-oaj"/>
+                        <segue destination="e9Y-v5-B3E" kind="show" identifier="completeSignUp" id="rxk-48-OZ5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yu2-On-96D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="603-Jm-gwD" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="748" y="-609"/>
+            <point key="canvasLocation" x="1794" y="-1650"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="NCy-6z-VAY">
             <objects>
                 <tabBarController id="e9Y-v5-B3E" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="ByD-NT-A9O"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="f0w-3w-9W1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -693,6 +774,9 @@ Cg
             <point key="canvasLocation" x="4596" y="-243"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="rxk-48-OZ5"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="Image" width="599" height="576"/>
         <image name="Image-1" width="568" height="142"/>
